--- a/safejet_exchange/pubspec.yaml
+++ b/safejet_exchange/pubspec.yaml
@@ -66,9 +66,10 @@ dependencies:
   fl_chart: ^0.66.0
   flutter_dotenv: ^5.1.0
   country_picker: ^2.0.25
-  flutter_idensic_mobile_sdk_plugin: ^1.33.1
+  flutter_idensic_mobile_sdk_plugin: ^1.35.2
   image_picker: ^1.0.4
-  image_cropper: ^5.0.1
+  # image_cropper: ^5.0.1
+  image_cropper: ^9.1.0  
   flutter_image_compress: ^2.4.0  
   auto_size_text: ^3.0.0
   flutter_speed_dial: ^7.0.0
